--- a/products.html
+++ b/products.html
@@ -42,7 +42,13 @@
                   <a class="nav-link" href="./finishes.html">Finishes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./projects.html">Projects</a>
+                  <button
+                    class="nav-link"
+                    data-bs-toggle="modal"
+                    data-bs-target="#projectsModal"
+                  >
+                    Projects
+                  </button>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./technical_data.html"
