--- a/certifications.html
+++ b/certifications.html
@@ -77,13 +77,159 @@
             <div class="col-xl-5">
               <ul class="certificates list-unstyled mb-0 ps-0">
                 <li>
-                  <p class="certificate-name">ALCOBOND A2 DUBAI COC</p>
+                  <p class="certificate-name active">
+                    ASTM E84-19A, ASTM D1929-16, EN 13501-1:2018
+                  </p>
                 </li>
                 <li>
-                  <p class="certificate-name">ALCOBOND A2 DUBAI COC</p>
+                  <p class="certificate-name">
+                    NFPA 285-2019(SYSTEM DESIGNATION: A114H61-4)
+                  </p>
                 </li>
                 <li>
-                  <p class="certificate-name active">ALCOBOND A2 DUBAI COC</p>
+                  <p class="certificate-name">
+                    NFPA 285-2019(SYSTEM DESIGNATION: A21B140-4)
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">ASTM E108</p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ASTM E84-19A, ASTM D1929-16, EN 13501-1:2018
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    NFPA 285-2019(SYSTEM DESIGNATION: A114H61-4)
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    DUBAI, UAE: DIRECTORATE GEN. DEPARTMENT OF DUBAI CIVIL
+                    DEFENSE ALCOBOND® A2 & ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    DUBAI, UAE: CERTIFICATION OF COMPLIANCE BY GEN. DEPARTMENT
+                    OF DUBAI CIVIL DEFENSE ALCOBOND® A2
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    DUBAI, UAE: CERTIFICATION OF COMPLIANCE BY GEN. DEPARTMENT
+                    OF DUBAI CIVIL DEFENSE ALCOBOND® A2
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    DUBAI, UAE: CERTIFICATION OF COMPLIANCE BY GEN. DEPARTMENT
+                    OF DUBAI CIVIL DEFENSE ALCOBOND® A2
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    DUBAI, UAE: CERTIFICATION OFCOMPLIANCE BY GEN. DEPARTMENT OF
+                    DUBAI CIVIL DEFENSE ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ABU DHABI, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE ALCOBOND®
+                    A2 & ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    SHARJAH, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE ALCOBOND® A2
+                    & ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    AJMAN, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE ALCOBOND® A2 &
+                    ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    RAS AL KHAIMAH, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE
+                    ALCOBOND® A2 & ALCOBOND®
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    KUWAIT FIRE SERVICE DIRECTORATE ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    KINGDOM OF BAHRAIN GEN. DIRECTORATE OF CIVIL DEFENCE
+                    ALCOBOND® A2 & ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    OMAN CIVIL DEFENCE ALCOBOND® A2 & ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">UAE, DUBAI CENTRAL LABORATORY</p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    UAE, MINISTRY OF ENERGY AND INFRASTRUCTURE: QUALIFICATION
+                    CERTIFICATION
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    KSA, SAUDI STANDARDS, METROLOGY AND QUALITY ORGANIZATION
+                    (SASO)
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">CE MARK: EUROPEAN COMMISSION</p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ISO9001:2015 QUALITY MANAGEMENT SYSTEM215
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ISO45001:2018 OCCUPATIONAL HEALTH AND SAFETY MANAGEMENT
+                    SYSTEM217
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ISO14001: 2015 ENVIRONMENTAL MANAGEMENT SYSTEM219
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    SA8000:2014 SOCIAL ACCOUNTABILITY221
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ENVIRONMENTAL PRODUCT DECLARATION ALCOBOND® A2
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ENVIRONMENTAL PRODUCT DECLARATION ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">
+                    ENVIRONMENTAL PRODUCT DECLARATION ALCOBOND® FR
+                  </p>
+                </li>
+                <li>
+                  <p class="certificate-name">LEED V4 OVERVIEW</p>
                 </li>
               </ul>
             </div>
@@ -95,21 +241,234 @@
               >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./assets/images/certificates/1.jpg" alt="..." />
+                    <img src="./assets/images/certificates/1.jpg" alt="" />
                     <div class="carousel-caption d-none d-md-block">
                       <h5>ASTM E84-19A, ASTM D1929-16, EN 13501-1:2018</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/certificates/2.jpg" alt="..." />
+                    <img src="./assets/images/certificates/2.jpg" alt="" />
                     <div class="carousel-caption d-none d-md-block">
                       <h5>NFPA 285-2019(SYSTEM DESIGNATION: A114H61-4)</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./assets/images/certificates/3.jpg" alt="..." />
+                    <img src="./assets/images/certificates/3.jpg" alt="" />
                     <div class="carousel-caption d-none d-md-block">
                       <h5>NFPA 285-2019(SYSTEM DESIGNATION: A21B140-4)</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/4.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>ASTM E108</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/5.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ASTM E84-19A, ASTM D1929-16, EN 13501-1:2018
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/6.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        NFPA 285-2019(SYSTEM DESIGNATION: A114H61-4)
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/7.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        DUBAI, UAE: DIRECTORATE GEN. DEPARTMENT OF DUBAI CIVIL
+                        DEFENSE ALCOBOND® A2 & ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/8-1.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        DUBAI, UAE: CERTIFICATION OF COMPLIANCE BY GEN.
+                        DEPARTMENT OF DUBAI CIVIL DEFENSE ALCOBOND® A2
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/8-2.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        DUBAI, UAE: CERTIFICATION OF COMPLIANCE BY GEN.
+                        DEPARTMENT OF DUBAI CIVIL DEFENSE ALCOBOND® A2
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/8-3.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        DUBAI, UAE: CERTIFICATION OF COMPLIANCE BY GEN.
+                        DEPARTMENT OF DUBAI CIVIL DEFENSE ALCOBOND® A2
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/9.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        DUBAI, UAE: CERTIFICATION OFCOMPLIANCE BY GEN.
+                        DEPARTMENT OF DUBAI CIVIL DEFENSE ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/10.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ABU DHABI, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE
+                        ALCOBOND® A2 & ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/11.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        SHARJAH, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE ALCOBOND®
+                        A2 & ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/12.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        AJMAN, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE ALCOBOND®
+                        A2 & ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/13.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        RAS AL KHAIMAH, UAE: GEN. DEPARTMENT OF CIVIL DEFENSE
+                        ALCOBOND® A2 & ALCOBOND®
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/14.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        KUWAIT FIRE SERVICE DIRECTORATE ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/15.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        KINGDOM OF BAHRAIN GEN. DIRECTORATE OF CIVIL DEFENCE
+                        ALCOBOND® A2 & ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/16.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        OMAN CIVIL DEFENCE ALCOBOND® A2 & ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/17.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>UAE, DUBAI CENTRAL LABORATORY</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/18.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        UAE, MINISTRY OF ENERGY AND INFRASTRUCTURE:
+                        QUALIFICATION CERTIFICATION
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/19.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        KSA, SAUDI STANDARDS, METROLOGY AND QUALITY ORGANIZATION
+                        (SASO)
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/20.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>CE MARK: EUROPEAN COMMISSION</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/21.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ISO9001:2015 QUALITY MANAGEMENT SYSTEM215
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/22.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ISO45001:2018 OCCUPATIONAL HEALTH AND SAFETY MANAGEMENT
+                        SYSTEM217
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/23.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ISO14001: 2015 ENVIRONMENTAL MANAGEMENT SYSTEM219
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/24.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        SA8000:2014 SOCIAL ACCOUNTABILITY221
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/25.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ENVIRONMENTAL PRODUCT DECLARATION ALCOBOND® A2
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/26.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="type2">
+                        ENVIRONMENTAL PRODUCT DECLARATION ALCOBOND® FR
+                      </h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./assets/images/certificates/27.jpg" alt="" />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>LEED V4 OVERVIEW</h5>
                     </div>
                   </div>
                 </div>
@@ -241,6 +600,11 @@
     </div>
 
     <script
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
       integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
       crossorigin="anonymous"
@@ -252,6 +616,26 @@
     ></script>
     <script>
       $(".carousel").carousel();
+    </script>
+    <script>
+      function makeListActive(activeCert) {
+        var listName = document.querySelectorAll('.certificate-name');
+        for (let i = 0; i < listName.length; i++) {
+          const element = listName[i];
+          var fullName = $(element).html().replace(/\s/g, '');
+          if (fullName == activeCert) {
+            $(element).addClass('.active')
+          } else {
+            continue;
+          }
+        }
+      }
+      var myCarousel = document.getElementById("certificationsCarousel");
+
+      myCarousel.addEventListener("slide.bs.carousel", function () {
+        var activeCert = $(".carousel-item.active").find("h5").html();
+        makeListActive(activeCert);
+      });
     </script>
   </body>
 </html>
